# stock-mystery-video-generator

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  stock_year_review.py
backup/: stock_year_review.py
